# reizan-ansigate

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: reizan-ansigate.yml
fixtures/: clean.txt  poisoned_jqwik_ansi.txt
src/reizan_ansigate/: __init__.py  __main__.py  ansi.py  cli.py  formatting.py  models.py  normalization.py  scanner.py
tests/: test_cli.py  test_scanner.py
